# libcuebin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
include/libcuebin/: cueParser.hpp  cueTypes.hpp  disc.hpp  error.hpp  msf.hpp  sector.hpp  track.hpp
src/: CMakeLists.txt  cueParser.cpp  cueTypes.cpp  disc.cpp  msf.cpp  track.cpp
tests/: CMakeLists.txt  testCueParser.cpp  testDisc.cpp  testMsf.cpp
tests/data/: metadata.cue  multiFile.cue  multiTrack.cue  singleTrack.cue
